# LeapHTTP

./: .gitignore  .travis.yml  CMakeLists.txt  LeapHTTP.wxs  README.md  leaphttp-config.cmake.in  leaphttp-configVersion.cmake.in  version.cmake
cmake-modules/: FindCURL.cmake  FindZLIB.cmake
scripts/: whitespace_check.sh
src/: CMakeLists.txt
src/leaphttp/: CMakeLists.txt  CircularBufferStream.h  Cookie.cpp  Cookie.h  HttpHeader.cpp  HttpHeader.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpTransferBase.h  HttpTransferDownload.h  HttpTransferGetJSON.h  HttpTransferGetStream.h  HttpTransferPostString.h  HttpTransferWorker.cpp  HttpTransferWorker.h  NetworkServices.cpp  NetworkServices.h  NetworkSession.cpp  NetworkSession.h  NetworkSessionManager.cpp  NetworkSessionManager.h  NetworkStream.h  NetworkTransferContext.h  NetworkTransferManager.cpp  NetworkTransferManager.h  Url.cpp  Url.h  stdafx.h
src/leaphttp/testing/: CMakeLists.txt  CircularBufferStreamTest.cpp  NetworkServicesContextTest.cpp  UrlTest.cpp  stdafx.h
